// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/dropdown/demo/basic.md correctly 1`] = `
<a
  class="wmstool-dropdown-link wmstool-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    class="anticon anticon-down"
  />
</a>
`;

exports[`renders ./components/dropdown/demo/context-menu.md correctly 1`] = `
<span
  class="wmstool-dropdown-trigger"
  style="user-select:none"
>
  Right Click on Me
</span>
`;

exports[`renders ./components/dropdown/demo/dropdown-button.md correctly 1`] = `
<div>
  <div
    class="wmstool-btn-group wmstool-dropdown-button"
  >
    <button
      class="wmstool-btn wmstool-btn-default"
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="wmstool-btn wmstool-dropdown-trigger wmstool-btn-default"
      type="button"
    >
      <i
        class="anticon anticon-down"
      />
    </button>
  </div>
  <div
    class="wmstool-btn-group wmstool-dropdown-button"
    style="margin-left:8px"
  >
    <button
      class="wmstool-btn wmstool-btn-default"
      disabled=""
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="wmstool-btn wmstool-dropdown-trigger wmstool-btn-default"
      type="button"
    >
      <i
        class="anticon anticon-down"
      />
    </button>
  </div>
  <button
    class="wmstool-btn wmstool-dropdown-trigger"
    style="margin-left:8px"
    type="button"
  >
    <span>
      Button 
    </span>
    <i
      class="anticon anticon-down"
    />
  </button>
</div>
`;

exports[`renders ./components/dropdown/demo/event.md correctly 1`] = `
<a
  class="wmstool-dropdown-link wmstool-dropdown-trigger"
  href="#"
>
  Hover me, Click menu item 
  <i
    class="anticon anticon-down"
  />
</a>
`;

exports[`renders ./components/dropdown/demo/item.md correctly 1`] = `
<a
  class="wmstool-dropdown-link wmstool-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    class="anticon anticon-down"
  />
</a>
`;

exports[`renders ./components/dropdown/demo/overlay-visible.md correctly 1`] = `
<a
  class="wmstool-dropdown-link wmstool-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    class="anticon anticon-down"
  />
</a>
`;

exports[`renders ./components/dropdown/demo/placement.md correctly 1`] = `
<div>
  <button
    class="wmstool-btn wmstool-dropdown-trigger"
    type="button"
  >
    <span>
      bottomLeft
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-dropdown-trigger"
    type="button"
  >
    <span>
      bottomCenter
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-dropdown-trigger"
    type="button"
  >
    <span>
      bottomRight
    </span>
  </button>
  <br />
  <button
    class="wmstool-btn wmstool-dropdown-trigger"
    type="button"
  >
    <span>
      topLeft
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-dropdown-trigger"
    type="button"
  >
    <span>
      topCenter
    </span>
  </button>
  <button
    class="wmstool-btn wmstool-dropdown-trigger"
    type="button"
  >
    <span>
      topRight
    </span>
  </button>
</div>
`;

exports[`renders ./components/dropdown/demo/sub-menu.md correctly 1`] = `
<a
  class="wmstool-dropdown-link wmstool-dropdown-trigger"
  href="#"
>
  Cascading menu 
  <i
    class="anticon anticon-down"
  />
</a>
`;

exports[`renders ./components/dropdown/demo/trigger.md correctly 1`] = `
<a
  class="wmstool-dropdown-link wmstool-dropdown-trigger"
  href="#"
>
  Click me 
  <i
    class="anticon anticon-down"
  />
</a>
`;
